fix scrollbars appearing when you click the +

--- a/style/navbar.css
+++ b/style/navbar.css
@@ -24,7 +24,7 @@
     height: auto;
     cursor: pointer;
     border-radius: 0px 5px 5px 0px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 #chars.hide:hover {
